tests222/tests2/test341.out
lli: <stdin>:1:1: error: expected top-level entity
line 20: variable a is not defined
^
